--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -2,106 +2,33 @@
    /* JEKYLL-mono-color */
 /***************************/
 
+body {
+	color: white;
 
-/* 
-    *Title
-*/
-
-.site-name {
-    a {
-      color: $white;
-      text-decoration: none;
-    	cursor: pointer;
-      &:hover{
-        color: darken($navbar-hover-color,20);
-      }
-    }
-}
-
- .post {
-        a {
-         color: $mono-color;
-         &:hover{
-           color: darken($mono-color,20);
-         }
-     }
- }
- 
- .post-heading {
-        a {
-         color: $hl-color;
-         &:hover{
-           color: darken($hl-color,20);
-         }
-     }
- }
- 
-/*
-    *Buttons
-*/
-
-.button,
-button, {
-    display: inline-block;
-    height: 38px;
-    padding: 0 30px;
-    color: #555;
-    text-align: center;
-    font-size: 13px;
-    font-weight: 600;
-    line-height: 38px;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: transparent;
-    border-radius: 4px;
-    border: 1px solid #bbb;
-    cursor: pointer;
-    box-sizing: border-box; 
-}
-    
-.button:hover,
-button:hover,
-.button:focus,
-button:focus,{
-    color: #333;
-    border-color: #888;
-    outline: 0; }
-    
-.button.button-primary,
-button.button-primary, {
-    color: $mono-color;
-    background-color: transparent;
-    border-color: $mono-color; 
-}
-    
-.button.button-primary:hover,
-button.button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus {
-    color: #FFF;
-    background-color: $mono-color;
-    border-color: $mono-color; 
+	a {
+		color: white;
+	}
 }
 
 /*
     *Header
 */
 
+
 .intro-header {
-  border-top: 5px solid white;
-  background-color:$mono-color;
+  background-image: url(/images/florian-wehde-1uWanmgkd5g-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 .intro-header .post-heading {
   padding: 100px 0 50px;
-  color: $white;
   
 }
 
 .intro-header .post-heading h1 {
-    color:$white;
-    font-size: 36px;
+    font-size: 250%;
     line-height: 1.5;
     font-family:$raleway ;
 }
@@ -135,11 +62,7 @@ button.button-primary:focus {
 
 .svg-icon {
     a {
-      color:darken($mono-color,10);
       cursor: pointer;
-      &:hover {
-        color: darken($mono-color,20);
-      }
     }
 }
 
@@ -187,116 +110,24 @@ button.button-primary:focus {
 	cursor: default;    
 }
 
-.ch-info-wrap, 
-.ch-info{
-	position: absolute;
-	width: 180px;
-	height: 180px;
-	border-radius: 50%;
-}
-
-.ch-info-wrap {
-	top: 20px;
-	left: 20px;
-	background: #fff url(/images/bg.jpg);
-	box-shadow: 
-		0 0 0 20px rgba(255,255,255,0.2), 
-		inset 0 0 3px rgba(115,114, 23, 0.8);
-}
-
-.ch-info > div {
+a.ch-info {
 	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;
-	background-position: center center;
-	-webkit-backface-visibility: hidden;
+	background-color: #370e52e0;
+	width: 350px;
+	padding: 1.5em;
+
+	p {
+		padding: 10px 5px 0;
+		margin: 0 30px;
+		font-size: 20px;
+	}
 }
 
-.ch-info .ch-info-front {
-	-webkit-transition: all 0.6s ease-in-out;
-	-moz-transition: all 0.6s ease-in-out;
-	-o-transition: all 0.6s ease-in-out;
-	-ms-transition: all 0.6s ease-in-out;
-	transition: all 0.6s ease-in-out;
+.side-by-side {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: row-reverse;
+	.twitter {
+		margin-top: 1.5em;
+	}
 }
-
-.ch-info .ch-info-back {
-	opacity: 0;
-	background: #fff;
-	pointer-events: none;
-	-webkit-transform: scale(1.5);
-	-moz-transform: scale(1.5);
-	-o-transform: scale(1.5);
-	-ms-transform: scale(1.5);
-	transform: scale(1.5);
-	-webkit-transition: all 0.4s ease-in-out 0.2s;
-	-moz-transition: all 0.4s ease-in-out 0.2s;
-	-o-transition: all 0.4s ease-in-out 0.2s;
-	-ms-transition: all 0.4s ease-in-out 0.2s;
-	transition: all 0.4s ease-in-out 0.2s;
-}
-
-.ch-img-1 { 
-	background-image: url(#{$avatar});
-}
-
-.ch-info h3 {
-	color: #000;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-size: 18px;
-	margin: 0 15px;
-	padding: 40px 0 0 0;
-	height: 80px;
-	font-family: 'Open Sans', Arial, sans-serif;
-	text-shadow: 
-		0 0 1px #fff, 
-		0 1px 2px rgba(0,0,0,0.3);
-}
-
-.ch-info p {
-	color: #fff;
-	padding: 10px 5px 0;
-	font-style: italic;
-	margin: 0 30px;
-	font-size: 12px;
-	
-}
-
-.ch-info p a {
-	display: block;
-	color: $mono-color;
-	font-style: normal;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 9px;
-	letter-spacing: 1px;
-	padding-top: 4px;
-	font-family: 'Open Sans', Arial, sans-serif;
-}
-
-.ch-info p a:hover {
-	color: darken($mono-color,10%);
-}
-
-.ch-item:hover .ch-info-front {
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-o-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
-	opacity: 0;
-} 
-
-.ch-item:hover .ch-info-back {
-	-webkit-transform: scale(1);
-	-moz-transform: scale(1);
-	-o-transform: scale(1);
-	-ms-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
-	pointer-events: auto;
-}
-
