--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,11 @@
         <div class="svg-icon">
           {% include svg-icons.html %}
         </div>
+        <div class="coc">
+          💜 Ethos: Read our <a href="https://github.com/elixir-berlin/planning/blob/main/Code-of-Conduct.md">Code of Conduct</a>
+          <br/>
+          💬 Talk: <a href="https://discord.com/invite/WaKTXHD">Join our Discord server</a>
+        </div>
       </footer>
     </div>
   </div>
