Make Fernsehturm visible on mobile

--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -17,6 +17,7 @@ body {
 
 .intro-header {
   background-image: url(/images/florian-wehde-1uWanmgkd5g-unsplash.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
