--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
   <div class="intro-header">
     <div class="side-by-side">
-      <div>
+      <div class="main-content">
         <div class="wrapper-masthead">
           <div class="container">
             <header class="masthead clearfix">
@@ -49,7 +49,7 @@
       </div>
 
       <div class="twitter">
-        <a class="twitter-timeline" data-width="300" data-height="570" data-theme="light" data-link-color="#8476ad"
+        <a class="twitter-timeline" data-width="450" data-height="570" data-theme="light" data-link-color="#8476ad"
           href="https://twitter.com/ElixirBerlin">Loading tweets by ElixirBerlin...</a>
         <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
