--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -130,6 +130,13 @@ a.ch-info {
 	flex-direction: row-reverse;
 	.twitter {
 		margin-top: 1.5em;
+		flex-grow: 0.4;
+		display: flex;
+		justify-content: center;
+	}
+	.main-content {
+		flex-grow: 1;
+		margin-top: 1.5em;
 	}
 
 }
