--- a/style.scss
+++ b/style.scss
@@ -121,7 +121,7 @@ img {
 }
 
 .masthead {
-  padding: 20px 0;
+  padding: 20px 20px;
 
   @include mobile {
     text-align: center;
@@ -167,7 +167,7 @@ img {
 nav {
   float: right;
   font-family: $helveticaNeue;
-  font-size: 18px;
+  font-size: 22px;
 
   @include mobile {
     float: none;
