--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -16,8 +16,8 @@ body {
 
 
 .intro-header {
-  background-image: url(/images/florian-wehde-1uWanmgkd5g-unsplash.jpg);
-  background-position: center;
+  background-image: url(/images/florian-wehde-1uWanmgkd5g-unsplash-v2.jpg);
+  background-position: right;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
