--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                 <a href="https://www.meetup.com/Elixir-Berlin/">The Meetup</a>
                 <a href="https://github.com/elixir-berlin/planning/issues/">Apply as Speaker</a>
                 <a href="https://github.com/elixir-berlin/elixir-companies-berlin">Company Register</a>
-                <a href="https://github.com/elixir-berlin/elixir-berlin.github.io">Change this Site</a>
+                <a href="https://join.slack.com/t/elixir-lang/shared_invite/zt-1f13hz7mb-N4KGjF523ONLCcHfb8jYgA">&#x23;Berlin</a>
               </nav>
             </header>
           </div>
@@ -69,7 +69,7 @@
         <div class="coc">
           💜 Ethos: Read our <a href="https://github.com/elixir-berlin/planning/blob/main/Code-of-Conduct.md">Code of Conduct</a>
           <br/>
-          💬 Talk: <a href="https://discord.com/invite/WaKTXHD">Join our Discord server</a>
+          💬 Talk: <a href="https://join.slack.com/t/elixir-lang/shared_invite/zt-1f13hz7mb-N4KGjF523ONLCcHfb8jYgA">Join &#x23;Berlin on the Elixir Slack</a>
         </div>
       </footer>
     </div>
