--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <header class="masthead clearfix">
               <nav>
                 <a href="https://www.meetup.com/Elixir-Berlin/">The Meetup</a>
-                <a href="https://github.com/elixir-berlin/planning/issues/">Apply as Speaker</a>
+                <a href="https://github.com/elixir-berlin/planning/issues/new?template=talk.yml">Apply as Speaker</a>
                 <a href="https://github.com/elixir-berlin/elixir-companies-berlin">Company Register</a>
                 <a href="https://join.slack.com/t/elixir-lang/shared_invite/zt-1f13hz7mb-N4KGjF523ONLCcHfb8jYgA">&#x23;Berlin</a>
               </nav>
