--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,8 @@
       </div>
 
       <div class="twitter">
-        <a class="twitter-timeline" data-width="450" data-height="570" data-theme="light" data-link-color="#8476ad"
-          href="https://twitter.com/ElixirBerlin">Loading tweets by ElixirBerlin...</a>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a class='twitter-timeline' data-handle='ElixirBerlin' data-width='450' data-height='570' data-theme='light' ></a>
+        <script src='https://www.athabasca.dev/content/scripts/widget.js'></script>
       </div>
     </div>
   </div>
