--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                 <a href="https://github.com/elixir-berlin/planning/issues/new?template=talk.yml">Apply as Speaker</a>
                 <a href="https://github.com/elixir-berlin/elixir-companies-berlin">Company Register</a>
                 <a href="https://join.slack.com/t/elixir-lang/shared_invite/zt-29w4dnkie-VkuKAAiVHSMmKakxrVA27w">Slack (&#x23;Berlin)</a>
-                <a href="https://discord.com/invite/WaKTXHD">Discord</a>
+                <a href="https://discord.gg/UQY54bVw">Discord</a>
               </nav>
             </header>
           </div>
@@ -70,7 +70,7 @@
           💜 Ethos: Read our <a href="https://github.com/elixir-berlin/planning/blob/main/Code-of-Conduct.md">Code of Conduct</a>
           <br/>
           💬 Talk: <a href="https://join.slack.com/t/elixir-lang/shared_invite/zt-29w4dnkie-VkuKAAiVHSMmKakxrVA27w">Join &#x23;Berlin on Elixir-Slack</a>
-          💬 Talk: <a href="https://discord.com/invite/WaKTXHD">Join Elixir Berlin on Discord</a>
+          💬 Talk: <a href="https://discord.gg/UQY54bVw">Join Elixir Berlin on Discord</a>
         </div>
       </footer>
     </div>
