--- a/_sass/_jekyll-mono.scss
+++ b/_sass/_jekyll-mono.scss
@@ -129,7 +129,9 @@ a.ch-info {
 	justify-content: space-around;
 	flex-direction: row-reverse;
 	.twitter {
-		margin-top: 1.5em;
+		margin-top: 3em;
+		margin-left: 1.5em;
+		margin-right: 1.5em;
 		flex-grow: 0.4;
 		display: flex;
 		justify-content: center;
